# universal_conventer

./: CMakeLists.txt  README.md  baseconverter.cpp  baseconverter.h  bigfraction.cpp  bigfraction.h  biginteger.cpp  biginteger.h  inputparser.cpp  inputparser.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
